--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -68,7 +68,7 @@
     <script>
     function update(e) {
         var text = e.value;
-        $('#rendered').html(text)
+        $('#rendered').html(text);
     }
     </script>
 {% endblock %}
