--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -49,7 +49,11 @@
                       on {{post.date}}</p>
                   </div>
             {% endfor %}
+            {% else %}
+            <br>
+            <i style="color: gray">No Results</i>
             {% endif %}
+            
           </div>
         </div>
       </div>
