--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -61,6 +61,9 @@
             <a class="nav-link" href="{{url_for('about')}}">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{{url_for('posts')}}">Posts</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{{url_for('contact')}}">Contact</a>
           </li>
           {% if current_user.is_authenticated %}
