--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,7 +41,7 @@
         {% endif %}
         <!-- Pager -->
         <div class="clearfix">
-          <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+          <a class="btn btn-primary float-right" href="{{url_for('posts')}}">Older Posts &rarr;</a>
         </div>
       </div>
     </div>
