--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,99 +1,56 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<header class="masthead" style="background-image: url({{ url_for('static', filename='/images/make-a-post.jpg') }})">
+
+<header class="masthead" style="background-image: url({{ url_for('static', filename='/images/bg.jpg') }});max-height:67px;">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Make a Post</h1>
-            <span class="subheading"></span>
           </div>
         </div>
       </div>
     </div>
   </header>
-  
-  <!-- Main Content -->
+
   <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="post-preview">
-            <form action='' method='POST'>
-                {{form.hidden_tag()}}
-                <p>
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls">
-                            <label>Title</label>
-                            {{ form.title(type="text", class="form-control", placeholder="Title") }}
-                            <p class="help-block text-danger"></p>
-                            </div>
-                    </div>
-                </p>
-                <p>
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls">
-                            <label>Subtitle</label>
-                            {{ form.subtitle(type="text", class="form-control", placeholder="Subtitle") }}
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                </p>
-                <p>
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls">
-                            <label>Body</label>
-                            {{ form.raw_body(type="text", class="form-control", placeholder="Body", id="post", onkeypress="update(this)") }}
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                </p>
-                <p>
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls">
-                            <i>Rendered HTML</i>
-                                <div id="rendered"></div>
-                        </div>
-                    </div>
-                </p>
-                <p>
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls">
-                            <label>Tags</label>
-                            {{ form.tags(class="form-control", type="tags", placeholder="Tags", id="tags", style="width: 100%") }}
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                </p>
-                {{ form.submit(class="btn btn-primary" ) }}
-                </form>
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+          {% if Posts != [None] %}
+          {% for post in Posts %}
+        <div class="post-preview">
+          
+          <a href="{{url_for('view_post', id=post.post_id, title=post.title)}}">
+            <h2 class="post-title">
+              {{post.title}}
+            </h2>
+            <h3 class="post-subtitle">
+                {{ post.subtitle }}
+              </h3>
+          </a>
+          <p class="post-meta">Posted by
+            <a href="{{ url_for('about') }}">Ethan Shealey</a>
+            on {{post.date}}</p>
+        </div>
+        {% endfor %}
+        {% if has_prev or has_next %}
+        <hr>
+        {% endif %}
+        {% endif %}
+        <!-- Pager -->
+        <div class="clearfix">
+          {% if has_prev %}
+          <a class="btn btn-primary float-right" style="float:left !important;" href="{{url_for('posts', page=page-1)}}">&larr; Previous Page</a>
+          {% endif %}
+          {% if has_next %}
+          <a class="btn btn-primary float-right" href="{{url_for('posts', page=page+1)}}">Next Page &rarr;</a>
+          {% endif %}
         </div>
       </div>
     </div>
-    <script src="https://rawgit.com/jackmoore/autosize/master/dist/autosize.min.js"></script>
-    <script>autosize(document.getElementById("post"));</script>
-    <script>autosize(document.getElementById("rendered"));</script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script>
-    function update(e) {
-        var text = e.value;
-        $('#rendered').html(text);
-    }
-    </script>
-    <script>
-     let _$ = s => [].slice.call(document.querySelectorAll(s));
+  </div>
 
-        // log events as they happen:
-        let t = _$('#tags')[0];
-        t.addEventListener('input', log);
-        t.addEventListener('change', log);
-        function log(e) {
-            $('#out')[0].textContent = `_${e.type}: ${this.value.replace(/,/g,', ')}`;
-        }
+  {% endblock %}
 
-        // hook 'em up:
-        _$('input[type="tags"]').forEach(tagsInput);   
-    </script>
-
-{% endblock %}
+    
