Updated search page, edited pagination limits, and added some documentation

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -20,24 +20,23 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
           <div class="post-preview">
-            <h1>Hello! I am Ethan Shealey!</h1>
+            <h1>Hello! I am Ethan Shealey</h1>
             <p>
-            Who am I? I am currently a sophomore attending High Point University studying Computer Science with a focus in Cyber Security, 
-            and with my current situation amid the COVID-19 outbreak, 
-            I thought learning how to create and host my own Flask Web App would be a great time killer!
+            I am currently a sophmore studying Computer Science at High Point University, and ever since I was little I loved anything to do with computers and technology, 
+            I started with teaching myself the basics of web development in High School, but I never really knew where to get started with programming. When I finally got to college, I finally found my groove!
             </p>
             <p>
-            Programming is something I'm extremetly passionate about, although I didn't start learning to program until my freshman year of college! 
-            Before then I taught myself the basics of Web Development, that being HTML and CSS, in High School. This is what sparked my interest in everything computers!
-            </p>
-            <p>
-            Since then I have learned C, C++, Javascript, ReactJS, Java, Python, Flask, Assembly, Cyber Security, and much more! I have also competed in Cyber FastTrack Competiton and placed in the top 0.93%!
+            Since then I have learned a variety of languages such as C, C++, Javascript, ReactJS, Java, Python, Flask, Assembly, as well as Cyber Security, and much more! I also competed in Cyber FastTrack Competiton and placed in the top 0.93%!
             <ul><li><a href="http://www.highpoint.edu/blog/2019/10/hpu-students-advanced-in-national-cybersecurity-competition/" target="_blank">http://www.highpoint.edu/blog/2019/10/hpu-students-advanced-in-national-cybersecurity-competition/</a></li></ul>
             I also got to build a Python Flask web app with a couple friends for the Mayo Clinic!
             <ul><br><li><a href="http://www.highpoint.edu/blog/2019/11/students-and-faculty-in-hpus-webb-school-of-engineering-assist-in-nsf-funded-research/">http://www.highpoint.edu/blog/2019/11/students-and-faculty-in-hpus-webb-school-of-engineering-assist-in-nsf-funded-research/</a></li><li><a href="http://stemaccessforall.org/" target="_blank">http://stemaccessforall.org/</a></li></ul>
             </p>
             <p>
-            Feel free to click on any of the social media links below, or go check out my GitHub!
+              After working on that grant, I decided I wanted to apply what I had learned and build myself a website, this one! You can check out the source code on my GitHub!
+              <ul><li><a href="https://github.com/ethanshealey/blog">https://github.com/ethanshealey/blog</a></li></ul>
+            </p>
+            <p>
+            Feel free to click on any of the social media links below, or go check out my GitHub.
             </p>
           </div>
       </div>
