Fixed create_post being one key stroke behind

--- a/app/templates/create_post.html
+++ b/app/templates/create_post.html
@@ -44,7 +44,7 @@
                     <div class="control-group">
                         <div class="form-group floating-label-form-group controls">
                             <label>Body</label>
-                            {{ form.raw_body(type="text", class="form-control", placeholder="Body", id="post", onkeypress="update(this)") }}
+                            {{ form.raw_body(type="text", class="form-control", placeholder="Body", id="post", onkeyup="update(this)") }}
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
